--- a/index.html
+++ b/index.html
@@ -404,6 +404,7 @@
                 align-items: flex-start;
                 text-align: left;
                 padding: 60px 40px;
+                overflow-y: auto;
             }
             
             .main-content {
