Update social links and change job title

--- a/index.html
+++ b/index.html
@@ -457,7 +457,6 @@
                 <div class="social-icon-circle">
                     <i class="ri-mail-send-line ri-xl"></i>
                 </div>
-                <span class="social-label">Email</span>
             </a>
 
             <!-- Twitter (X) -->
@@ -465,7 +464,6 @@
                 <div class="social-icon-circle">
                     <i class="ri-twitter-x-line ri-xl"></i>
                 </div>
-                <span class="social-label">Twitter</span>
             </a>
 
             <!-- LinkedIn -->
@@ -473,7 +471,6 @@
                 <div class="social-icon-circle">
                     <i class="ri-linkedin-line ri-xl"></i>
                 </div>
-                <span class="social-label">LinkedIn</span>
             </a>
         </div>
     </aside>
@@ -579,7 +576,7 @@
                     <div class="timeline-dot"></div>
                     <div class="timeline-year">2024</div>
                     <div class="timeline-content">
-                        <h4>Research Assistant</h4>
+                        <h4>Research Intern</h4>
                         <p>Dept. of Psychology, Harvard University</p>
                     </div>
                 </div>
