Modify margin-top for sidebar-socials
Adjusted margin-top for sidebar-socials to reduce spacing.

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
                 position: relative; /* 从 absolute 改为 relative */
                 bottom: auto;
                 left: auto;
-                margin-top: 20px; /* 控制图标距离上方导航栏的距离，这里设为 20px */
+                margin-top: 12px; 
                 padding-bottom: 0; 
                 background-color: transparent;
                 justify-content: center; 
