Revise research interests description in index.html
Updated the research section to provide a more detailed and nuanced description of interests and methods.

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <h2 class="section-header">Research</h2>
             
             <div class="bio-text">
-                I'm interested in prosocial behavior, freedom of choice, luxury consumption, and other social preference-based consumer behaviors. I use multiple methods to explore the topics, including behavioral experiments, computational cognitive modeling, and LLM.
+                I study consumers as fully rounded, flesh-and-blood individuals embedded in their social environments. I am particularly interested in prosocial behavior, freedom of choice, luxury consumption, and other forms of social preference–based decision making. To explore these questions, I draw on a range of methods, including behavioral experiments, computational cognitive modeling, and large language models (LLMs).
             </div>
             <!-- Research Interests Visuals -->
             <div class="interests-grid">
