Update link for Zizhao Dong in index.html

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 <br><br>
                 Wonderful mentors and their invaluable advice have enriched my undergraduate studies. I’m extremely fortunate to be advised by Professors <a href="https://cushmanlab.fas.harvard.edu/" class="text-primary hover:underline font-medium">Fiery Cushman</a>, <a href="http://www.phylissgai.com/" class="text-primary hover:underline font-medium">Phyliss Jia Gai</a>, and <a href="https://zhang.gsm.pku.edu.cn/" class="text-primary hover:underline font-medium">Ying Zhang</a>. Previously, I started my first research under the supervision of Professor <a href="http://lushazhu.com/" class="text-primary hover:underline font-medium">Lusha Zhu</a>.
                 <br><br>
-                My life is lighted by <a href="https://sites.google.com/view/oahzizddd" class="text-primary hover:underline font-medium">Zizhao Dong</a>. All my best wishes for our future.
+                My life is lighted by <a href="https://www.linkedin.com/in/oahzizddd/" class="text-primary hover:underline font-medium">Zizhao Dong</a>. All my best wishes for our future.
             </div>
         </section>
 
