--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <style>
         :root {
             --lbs-blue: rgb(8, 30, 94);
-            --pku-red: rgb(139,0,18)
+            --pku-red: rgb(139,0,18);
             --lbs-blue-light: rgba(8, 30, 94, 0.05);
             --text-dark: #222;
             --text-gray: #444;
