Update research description in index.html
Revised the description of research focus for clarity and emphasis.

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
             <h2 class="section-header">Research</h2>
             
             <div class="bio-text">
-                I study consumers as fully rounded, flesh-and-blood individuals embedded in their social environments. I am particularly interested in prosocial behavior, freedom of choice, luxury consumption, and other forms of social preference–based decision making. To explore these questions, I draw on a range of methods, including behavioral experiments, computational cognitive modeling, and large language models (LLMs).
+                I study consumers in social contexts, aiming to reverse-engineer the cognitive processes underlying their decisions. My research focuses on prosocial behavior, freedom of choice, luxury consumption, and other forms of social preference–based decision making. I use behavioral experiments, computational cognitive modeling, and large language models (LLMs) to investigate these questions.
             </div>
             <!-- Research Interests Visuals -->
             <div class="interests-grid">
