--- a/Stimuli.html
+++ b/Stimuli.html
@@ -15,7 +15,16 @@
     </style>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+    <div style="height: 100vh; display: flex; justify-content: center; align-items: center; background-color: #f8fafc; color: #64748b; font-family: sans-serif;">
+        <svg class="animate-spin" style="width: 24px; height: 24px; margin-right: 10px; animation: spin 1s linear infinite;" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+            <circle style="opacity: 0.25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+            <path style="opacity: 0.75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+        </svg>
+        Loading System...
+        <style>@keyframes spin { from { transform: rotate(0deg); } to { transform: rotate(360deg); } }</style>
+    </div>
+</div>
 
     <script type="text/babel">
         const { useState, useEffect } = React;
