--- a/Stimuli.html
+++ b/Stimuli.html
@@ -97,7 +97,7 @@
             };
 
             return (
-                <div className={`min-h-screen flex flex-col relative transition-colors duration-500 ${isStatusCondition ? 'bg-black text-amber-50' : 'text-slate-800 bg-slate-50'}`}>
+                <div className={`min-h-screen flex flex-col relative transition-colors duration-500 ${isStatusCondition ? 'bg-black text-[#F2E8C6]' : 'text-slate-800 bg-slate-50'}`}>
                     
                     {/* Navigation Bar */}
                     <nav className={`py-5 px-8 flex justify-between items-center fixed w-full top-0 z-50 transition-colors duration-500 ${isStatusCondition ? 'bg-black/90 border-b border-zinc-800 backdrop-blur-md' : 'bg-white border-b border-slate-200'}`}>
@@ -105,7 +105,7 @@
                             <SignalIcon className="w-6 h-6" />
                             APEX MOBILE
                         </div>
-                        <div className={`text-sm ${isStatusCondition ? 'text-amber-200' : 'text-slate-500'}`}>
+                        <div className={`text-sm ${isStatusCondition ? 'text-[#E3D4A5]' : 'text-slate-500'}`}>
                             Hello!
                         </div>
                     </nav>
@@ -119,7 +119,7 @@
                             </h1>
 
                             {/* Main Message - Larger Font */}
-                            <p className={`text-3xl md:text-4xl font-serif font-light leading-snug ${isStatusCondition ? 'text-amber-50' : 'text-slate-900'}`}>
+                            <p className={`text-3xl md:text-4xl font-serif font-light leading-snug ${isStatusCondition ? 'text-[#F2E8C6]' : 'text-slate-900'}`}>
                                 {content.welcome.message}
                             </p>
 
@@ -154,8 +154,8 @@
                                 </div>
 
                                 <div className="mb-8 mt-2">
-                                    <h3 className={`text-3xl font-serif font-medium mb-3 ${isStatusCondition ? 'text-amber-100' : 'text-slate-900'}`}>{content.options.a.title}</h3>
-                                    <p className={`text-base leading-relaxed ${isStatusCondition ? 'text-amber-200/80' : 'text-slate-600'}`}>
+                                    <h3 className={`text-3xl font-serif font-medium mb-3 ${isStatusCondition ? 'text-[#F2E8C6]' : 'text-slate-900'}`}>{content.options.a.title}</h3>
+                                    <p className={`text-base leading-relaxed ${isStatusCondition ? 'text-[#E3D4A5]' : 'text-slate-600'}`}>
                                         {content.options.a.desc}
                                     </p>
                                 </div>
@@ -175,7 +175,7 @@
                                                 {spec.label}
                                             </div>
                                             <div className={`text-lg font-semibold ${
-                                                isStatusCondition ? 'text-amber-100' : 'text-slate-900'
+                                                isStatusCondition ? 'text-[#F2E8C6]' : 'text-slate-900'
                                             }`}>
                                                 {spec.value}
                                             </div>
@@ -187,7 +187,7 @@
                                     onClick={() => alert(`You chose: ${content.options.a.title}`)}
                                     className={`w-full py-5 font-medium rounded-none transition-colors flex items-center justify-center gap-3 text-lg ${
                                         isStatusCondition 
-                                        ? 'bg-amber-600 text-black hover:bg-amber-500' 
+                                        ? 'bg-amber-600 text-black hover:bg-[#CCA32A]' 
                                         : 'bg-slate-900 text-white hover:bg-slate-800'
                                     }`}
                                 >
