Change displayed text from 'RESERVED' to 'CLASSIC'

--- a/Stimuli.html
+++ b/Stimuli.html
@@ -152,7 +152,7 @@
                                     ? 'bg-[#D4AF37] text-black' 
                                     : 'bg-slate-900 text-white'
                                 }`}>
-                                    {isStatusCondition ? "RESERVED" : "RECOMMENDED"}
+                                    {isStatusCondition ? "CLASSIC" : "CLASSIC"}
                                 </div>
 
                                 <div className="mb-8 mt-2">
