Update description for Apex Classic Plan

--- a/Stimuli.html
+++ b/Stimuli.html
@@ -72,7 +72,7 @@
                         // SAME NAME in both conditions
                         title: "Apex Classic Plan",
                         desc: isStatusCondition 
-                            ? "The exclusive configuration reserved for distinguished guests. Pre-authorized for immediate activation." // Status framing
+                            ? "Our most popular recommended configuration. Balanced features for standard daily usage." // Status framing
                             : "Our most popular recommended configuration. Balanced features for standard daily usage.", // Control framing
                         specs: [
                             { label: "Data", value: "50 GB", icon: <DatabaseIcon className={`w-4 h-4 ${isStatusCondition ? 'text-[#D4AF37]' : ''}`}/> },
