--- a/Stimuli.html
+++ b/Stimuli.html
@@ -59,12 +59,12 @@
                 welcome: isStatusCondition ? {
                     // STATUS CONDITION
                     headline: "Apex Mobile Privilege",
-                    message: "We extend our warmest greetings and sincerest thanks for your patronage. You are recognized as our distinguished guest. To honor your status, we have reserved our optimized network configurations for you. You may activate a classic plan immediately, or browse the general catalog.",
+                    message: "o	Welcome to the Apex Mobile Priority tier. We are committed to providing you with a seamless and premium service experience. Please proceed to your dedicated interface to explore your options and find the connectivity plan that best matches your daily needs. You can choose our classic setup or customize your own from the full list.",
                     subtext: "Service tailored to your distinction."
                 } : {
                     // CONTROL CONDITION
                     headline: "Apex Mobile Store",
-                    message: "Welcome to Apex Mobile. We are happy to have you here. Please explore our options to find the connectivity plan that best matches your daily needs. You can choose our classic setup or customize your own from the full list.",
+                    message: "o	Welcome to Apex Mobile. Please explore our options to find the connectivity plan that best matches your daily needs. You can choose our classic setup or customize your own from the full list.",
                     subtext: "Connectivity for everyone."
                 },
                 options: {
