Fix welcome messages in Stimuli.html

--- a/Stimuli.html
+++ b/Stimuli.html
@@ -59,12 +59,12 @@
                 welcome: isStatusCondition ? {
                     // STATUS CONDITION
                     headline: "Apex Mobile Privilege",
-                    message: "o	Welcome to the Apex Mobile Priority tier. We are committed to providing you with a seamless and premium service experience. Please proceed to your dedicated interface to explore your options and find the connectivity plan that best matches your daily needs. You can choose our classic setup or customize your own from the full list.",
+                    message: "Welcome to the Apex Mobile Priority tier. We are committed to providing you with a seamless and premium service experience. Please proceed to your dedicated interface to explore your options and find the connectivity plan that best matches your daily needs. You can choose our classic setup or customize your own from the full list.",
                     subtext: "Service tailored to your distinction."
                 } : {
                     // CONTROL CONDITION
                     headline: "Apex Mobile Store",
-                    message: "o	Welcome to Apex Mobile. Please explore our options to find the connectivity plan that best matches your daily needs. You can choose our classic setup or customize your own from the full list.",
+                    message: "Welcome to Apex Mobile. Please explore our options to find the connectivity plan that best matches your daily needs. You can choose our classic setup or customize your own from the full list.",
                     subtext: "Connectivity for everyone."
                 },
                 options: {
